[#9] Added breadcrumbs, updated registration form

--- a/module/User/view/user/index/create.phtml
+++ b/module/User/view/user/index/create.phtml
@@ -1,5 +1,90 @@
 <?php
-        $form->setAttribute('class', 'form-horizontal');
-        
-        echo $this->ztbForm($this->form);
+echo $this->navigation('navigation')->breadcrumbs()->setPartial('partials/breadcrumbs.phtml')->render();
 ?>
+
+<div class="page-header">
+    <h1>Create new user</h1>
+</div>
+
+<?php
+$form->prepare();
+
+// Set the method attribute for the form
+$form->setAttribute('method', 'post');
+$form->setAttribute('class', 'form-horizontal');
+
+// Get the form label plugin
+$formLabel = $this->plugin('formLabel');
+
+echo $this->form()->openTag($form);
+?>
+
+<div class="form-group">
+    <?php
+        /* @var $element \Zend\Form\Element\Text */
+        $element = $form->get('email');
+        $element->setLabelAttributes(array('class' => 'col-sm-2 control-label'));
+        $element->setAttributes(array('class' => 'form-control'));
+        echo $this->formLabel($element);
+        echo '<div class="col-sm-10">';
+        echo $this->formInput($element);
+        echo $this->formElementErrors()
+                  ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
+                  ->setMessageCloseString('</div>')
+                  ->render($element);
+        echo '</div>';
+    ?>
+</div>
+
+<div class="form-group">
+    <?php
+        /* @var $element \Zend\Form\Element\Text */
+        $element = $form->get('password');
+        $element->setLabelAttributes(array('class' => 'col-sm-2 control-label'));
+        $element->setAttributes(array('class' => 'form-control'));
+        echo $this->formLabel($element);
+        echo '<div class="col-sm-10">';
+        echo $this->formPassword($element);
+        echo $this->formElementErrors()
+                  ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
+                  ->setMessageCloseString('</div>')
+                  ->render($element);
+        echo '</div>';
+    ?>
+</div>
+
+<div class="form-group">
+    <?php
+        /* @var $element \Zend\Form\Element\Text */
+        $element = $form->get('passwordVerify');
+        $element->setLabelAttributes(array('class' => 'col-sm-2 control-label'));
+        $element->setAttributes(array('class' => 'form-control'));
+        echo $this->formLabel($element);
+        echo '<div class="col-sm-10">';
+        echo $this->formPassword($element);
+        echo $this->formElementErrors()
+                  ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
+                  ->setMessageCloseString('</div>')
+                  ->render($element);
+        echo '</div>';
+    ?>
+</div>
+
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+    <?php
+        /* @var $element \Zend\Form\Element\Button */
+        $element = $form->get('send');
+        $element->setAttributes(array('class' => 'btn btn-primary', 'value' => 'Registration'));
+        echo $this->formElement($element);
+    ?>
+    <?php
+        $element = new \Zend\Form\Element\Button('my-button');
+        $element->setLabel('Reset');
+        $element->setAttributes(array('class' => 'btn btn-default'));
+        echo $this->formButton($element);
+    ?>
+    </div>
+</div>
+
+<?php echo $this->form()->closeTag() ?>
