--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -12,11 +12,18 @@
                     <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                        <li><a href="<?php echo $this->url('user/create') ?>"><?php echo $this->translate('Registration') ?></a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
+                    <?php echo $this->navigation('navigation')
+                                    ->menu()
+                                    ->renderMenu(
+                                        null,
+                                        array(
+                                            'ulClass' => 'nav navbar-nav',
+                                            'minDepth' => 0,
+                                            'maxDepth' => 0
+                                        )
+                                    );
+                    ?>
+                </div>
             </div>
         </nav>
         <div class="container">
