--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
     color: #68b604;
 }
 
-.btn-success {
+/*.btn-success {
   background-color: #57a900;
   background-image: -moz-linear-gradient(top, #70d900, #57a900);
   background-image: -ms-linear-gradient(top, #70d900, #57a900);
@@ -16,9 +16,9 @@ body {
   background-image: -o-linear-gradient(top, #70d900, #57a900);
   background-image: linear-gradient(top, #70d900, #57a900);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#70d900', endColorstr='#57a900', GradientType=0);
-}
+}*/
 
-.btn-success:hover,
+/*.btn-success:hover,
 .btn-success:active,
 .btn-success.active,
 .btn-success.disabled,
@@ -28,10 +28,25 @@ body {
 
 .btn-success:active, .btn-success.active {
   background-color: #57a900;
-}
+}*/
 
 div.container a.brand {
     background: url("../img/zf2-logo.png") no-repeat scroll 0 10px transparent;
     margin-left: 0;
     padding: 8px 20px 12px 40px;
+}
+
+.bs-callout {
+    margin: 20px 0;
+    padding: 20px;
+    border-left: 3px solid #eee;
+}
+
+.bs-callout ul {
+    list-style-type: none;
+}
+
+.bs-callout-danger {
+    background-color: #fdf7f7;
+    border-color: #eed3d7;
 }
