[#10] Updated forms and created navigation file, updated entity for doctrine

--- a/module/Application/view/partials/messenger.phtml
+++ b/module/Application/view/partials/messenger.phtml
@@ -5,10 +5,26 @@ $flash->setMessageOpenFormat('<div%s>
      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
          &times;
      </button>')
-     ->setMessageSeparatorString('<br/>')
-     ->setMessageCloseString('</div>');
+    ->setMessageSeparatorString('<br/>')
+    ->setMessageCloseString('</div>');
 
-echo $flash->render('error',   array('alert', 'alert-dismissable', 'alert-danger'));
-echo $flash->render('info',    array('alert', 'alert-dismissable', 'alert-info'));
-echo $flash->render('default', array('alert', 'alert-dismissable', 'alert-warning'));
-echo $flash->render('success', array('alert', 'alert-dismissable', 'alert-success'));
+echo $flash->render('error', array(
+    'alert',
+    'alert-dismissable',
+    'alert-danger'
+));
+echo $flash->render('info', array(
+    'alert',
+    'alert-dismissable',
+    'alert-info'
+));
+echo $flash->render('default', array(
+    'alert',
+    'alert-dismissable',
+    'alert-warning'
+));
+echo $flash->render('success', array(
+    'alert',
+    'alert-dismissable',
+    'alert-success'
+));
