--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,35 +1,38 @@
-<?php echo $this->partial('partials/header') ?>
-    <body>
-        <div id="wrap">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <?php echo $this->navigation('navigation')
-                                    ->menu()
-                                    ->renderMenu(
-                                        null,
-                                        array(
-                                            'ulClass' => 'nav navbar-nav',
-                                            'minDepth' => 0,
-                                            'maxDepth' => 0
-                                        )
-                                    );
+<?php echo $this->partial('partials/header')?>
+<body>
+	<div id="wrap">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse"
+						data-target=".navbar-collapse">
+						<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img
+						src="<?php echo $this->basePath('img/zf2-logo.png') ?>"
+						alt="Zend Framework 2" />&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
+				</div>
+				<div class="collapse navbar-collapse">
+                    <?php
+                    
+echo $this->navigation('navigation')
+                        ->menu()
+                        ->renderMenu(null, array(
+                        'ulClass' => 'nav navbar-nav',
+                        'minDepth' => 0,
+                        'maxDepth' => 0
+                    ));
                     ?>
+                    <?php echo $this->partial('partials/login.phtml'); ?>
                 </div>
-            </div>
-        </nav>
-        <div class="container">
+			</div>
+		</nav>
+		<div class="container">
             <?php echo $this->partial('partials/messenger'); ?>
             
             <?php echo $this->content; ?>
-        </div> <!-- /container -->
         </div>
-<?php echo $this->partial('partials/footer') ?>
+		<!-- /container -->
+	</div>
+<?php echo $this->partial('partials/footer')?>
