--- a/module/Application/view/partials/breadcrumbs.phtml
+++ b/module/Application/view/partials/breadcrumbs.phtml
@@ -4,21 +4,19 @@
 $li = '<li %s>%s</li>';
 $href = '<a href="%s">%s</a>';
 
-echo implode("\n", array_map(
-        function ($navigation) use($li, $href) {
-            /* @var $navigation \Zend\Navigation\Page\Mvc */
-            $active = null;
-            if (!$navigation->isActive()) {
-                $content = sprintf($href, $navigation->getHref(), $navigation->getLabel());
-            } else {
-                $active = 'class="active"';
-                $content = $navigation->getLabel();
-            }
-            
-            return sprintf($li, $active, $content);
-        },
-        $this->pages)
-    );
+echo implode("\n", array_map(function ($navigation) use($li, $href)
+{
+    /* @var $navigation \Zend\Navigation\Page\Mvc */
+    $active = null;
+    if (! $navigation->isActive()) {
+        $content = sprintf($href, $navigation->getHref(), $navigation->getLabel());
+    } else {
+        $active = 'class="active"';
+        $content = $navigation->getLabel();
+    }
+    
+    return sprintf($li, $active, $content);
+}, $this->pages));
 ?>
     
 </ol>
