--- a/module/User/view/user/index/login.phtml
+++ b/module/User/view/user/index/login.phtml
@@ -1,19 +1,11 @@
-<?php
-echo $this->navigation('navigation')
-    ->breadcrumbs()
-    ->setPartial('partials/breadcrumbs.phtml')
-    ->render();
-?>
-
 <div class="page-header">
-	<h1>Login user</h1>
+	<h1><?php echo $this->translate('Login user') ?></h1>
 </div>
 
 <?php
     $form->prepare();
 
     // Set the method attribute for the form
-    $form->setAttribute('method', 'post');
     $form->setAttribute('class', 'form-horizontal');
 
     // Get the form label plugin
@@ -24,42 +16,44 @@ echo $this->navigation('navigation')
 
 <div class="form-group">
     <?php
-    /* @var $element \Zend\Form\Element\Text */
-    $element = $form->get('email');
-    $element->setLabelAttributes(array(
+    /* @var $identity \User\Form\IdentifierFieldset */
+    /* @var $identifier \Zend\Form\Element\Text */
+    $identity = $form->get('identity');
+    $identifier = $identity->get('identifier');
+    $identifier->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
-    $element->setAttributes(array(
+    $identifier->setAttributes(array(
         'class' => 'form-control'
     ));
-    echo $this->formLabel($element);
+    echo $this->formLabel($identifier);
     echo '<div class="col-sm-10">';
-    echo $this->formInput($element);
+    echo $this->formInput($identifier);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
         ->setMessageCloseString('</div>')
-        ->render($element);
+        ->render($identifier);
     echo '</div>';
     ?>
 </div>
 
 <div class="form-group">
     <?php
-    /* @var $element \Zend\Form\Element\Password */
-    $element = $form->get('password');
-    $element->setLabelAttributes(array(
+    /* @var $credential \Zend\Form\Element\Password */
+    $credential = $identity->get('credential');
+    $credential->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
-    $element->setAttributes(array(
+    $credential->setAttributes(array(
         'class' => 'form-control'
     ));
-    echo $this->formLabel($element);
+    echo $this->formLabel($credential);
     echo '<div class="col-sm-10">';
-    echo $this->formPassword($element);
+    echo $this->formPassword($credential);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
         ->setMessageCloseString('</div>')
-        ->render($element);
+        ->render($credential);
     echo '</div>';
     ?>
 </div>
