Renamed email field to identifier. Fixed model

--- a/module/User/view/user/index/login.phtml
+++ b/module/User/view/user/index/login.phtml
@@ -40,7 +40,7 @@
 <div class="form-group">
     <?php
     /* @var $credential \Zend\Form\Element\Password */
-    $credential = $identity->get('credential');
+    $credential = $identity->get('password');
     $credential->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
