--- a/module/User/view/user/index/create.phtml
+++ b/module/User/view/user/index/create.phtml
@@ -1,86 +1,79 @@
-<?php
-echo $this->navigation('navigation')
-    ->breadcrumbs()
-    ->setPartial('partials/breadcrumbs.phtml')
-    ->render();
-?>
-
 <div class="page-header">
-	<h1>Create new user</h1>
+    <h1><?php echo $this->translate('Registration') ?></h1>
 </div>
 
 <?php
-$form->prepare();
+$this->form->prepare();
 
 // Set the method attribute for the form
-$form->setAttribute('method', 'post');
-$form->setAttribute('class', 'form-horizontal');
-
+$this->form->setAttribute('class', 'form-horizontal');
 // Get the form label plugin
 $formLabel = $this->plugin('formLabel');
 
-echo $this->form()->openTag($form);
+echo $this->form()->openTag($this->form);
 ?>
 
 <div class="form-group">
     <?php
-    /* @var $element \Zend\Form\Element\Text */
-    $element = $form->get('email');
-    $element->setLabelAttributes(array(
+    /* @var $identity \User\Form\IdentifierFieldset */
+    /* @var $identifier \Zend\Form\Element\Text */
+    $identity = $this->form->get('identity');
+    $identifier = $identity->get('identifier');
+    $identifier->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
-    $element->setAttributes(array(
+    $identifier->setAttributes(array(
         'class' => 'form-control'
     ));
-    echo $this->formLabel($element);
+    echo $this->formLabel($identifier);
     echo '<div class="col-sm-10">';
-    echo $this->formInput($element);
+    echo $this->formInput($identifier);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
         ->setMessageCloseString('</div>')
-        ->render($element);
+        ->render($identifier);
     echo '</div>';
     ?>
 </div>
 
 <div class="form-group">
     <?php
-    /* @var $element \Zend\Form\Element\Text */
-    $element = $form->get('password');
-    $element->setLabelAttributes(array(
+    /* @var $credential \Zend\Form\Element\Password */
+    $credential = $identity->get('password');
+    $credential->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
-    $element->setAttributes(array(
+    $credential->setAttributes(array(
         'class' => 'form-control'
     ));
-    echo $this->formLabel($element);
+    echo $this->formLabel($credential);
     echo '<div class="col-sm-10">';
-    echo $this->formPassword($element);
+    echo $this->formPassword($credential);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
         ->setMessageCloseString('</div>')
-        ->render($element);
+        ->render($credential);
     echo '</div>';
     ?>
 </div>
 
 <div class="form-group">
     <?php
-    /* @var $element \Zend\Form\Element\Text */
-    $element = $form->get('passwordVerify');
-    $element->setLabelAttributes(array(
+    /* @var $credential \Zend\Form\Element\Password */
+    $credential = $identity->get('identical');
+    $credential->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
-    $element->setAttributes(array(
+    $credential->setAttributes(array(
         'class' => 'form-control'
     ));
-    echo $this->formLabel($element);
+    echo $this->formLabel($credential);
     echo '<div class="col-sm-10">';
-    echo $this->formPassword($element);
+    echo $this->formPassword($credential);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
         ->setMessageCloseString('</div>')
-        ->render($element);
+        ->render($credential);
     echo '</div>';
     ?>
 </div>
@@ -89,10 +82,9 @@ echo $this->form()->openTag($form);
 	<div class="col-sm-offset-2 col-sm-10">
     <?php
     /* @var $element \Zend\Form\Element\Button */
-    $element = $form->get('send');
+    $element = $this->form->get('send');
     $element->setAttributes(array(
-        'class' => 'btn btn-primary',
-        'value' => 'Registration'
+        'class' => 'btn btn-primary'
     ));
     echo $this->formElement($element);
     ?>
