--- a/module/User/view/user/index/login.phtml
+++ b/module/User/view/user/index/login.phtml
@@ -3,22 +3,21 @@
 </div>
 
 <?php
-    $form->prepare();
+    $this->form->prepare();
 
     // Set the method attribute for the form
-    $form->setAttribute('class', 'form-horizontal');
-
+    $this->form->setAttribute('class', 'form-horizontal');
     // Get the form label plugin
     $formLabel = $this->plugin('formLabel');
 
-    echo $this->form()->openTag($form);
+    echo $this->form()->openTag($this->form);
 ?>
 
 <div class="form-group">
     <?php
     /* @var $identity \User\Form\IdentifierFieldset */
     /* @var $identifier \Zend\Form\Element\Text */
-    $identity = $form->get('identity');
+    $identity = $this->form->get('identity');
     $identifier = $identity->get('identifier');
     $identifier->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
@@ -62,7 +61,7 @@
 	<div class="col-sm-offset-2 col-sm-10">
         <?php
         /* @var $element \Zend\Form\Element\Button */
-        $element = $form->get('send');
+        $element = $this->form->get('send');
         $element->setAttributes(array(
             'class' => 'btn btn-primary'
         ));
