--- a/module/User/view/user/index/login.phtml
+++ b/module/User/view/user/index/login.phtml
@@ -13,11 +13,13 @@
     $form = $this->form;
     echo $this->form()->openTag($this->form);
 
-    echo '<div class="alert alert-dismissable alert-danger">';
-    foreach ($this->errors as $error) {
-        echo $error . '<br/>';
+    if (count($this->errors) > 0) {
+        echo '<div class="alert alert-dismissable alert-danger">';
+        foreach ($this->errors as $error) {
+            echo $error . '<br/>';
+        }
+        echo '</div>';
     }
-    echo '</div>';
 ?>
 
 <div class="form-group">
