--- a/module/User/view/user/index/forgot.phtml
+++ b/module/User/view/user/index/forgot.phtml
@@ -9,17 +9,14 @@ $this->form->prepare();
 $this->form->setAttribute('class', 'form-horizontal');
 // Get the form label plugin
 $formLabel = $this->plugin('formLabel');
-/* @var $form \User\Form\UserForm */
-$form = $this->form;
+
 echo $this->form()->openTag($this->form);
 ?>
 
 <div class="form-group">
     <?php
-    /* @var $identity \User\Form\IdentifierFieldset */
     /* @var $identifier \Zend\Form\Element\Text */
-    $identity = $this->form->get('identity');
-    $identifier = $identity->get('identifier');
+    $identifier = $this->form->get('identifier');
     $identifier->setLabelAttributes([
         'class' => 'col-sm-2 control-label'
     ]);
