--- a/module/User/view/user/index/login.phtml
+++ b/module/User/view/user/index/login.phtml
@@ -9,17 +9,13 @@
     $this->form->setAttribute('class', 'form-horizontal');
     // Get the form label plugin
     $formLabel = $this->plugin('formLabel');
-    /* @var $form \User\Form\UserForm */
-    $form = $this->form;
     echo $this->form()->openTag($this->form);
 ?>
 
 <div class="form-group">
     <?php
-    /* @var $identity \User\Form\IdentifierFieldset */
     /* @var $identifier \Zend\Form\Element\Text */
-    $identity = $this->form->get('identity');
-    $identifier = $identity->get('identifier');
+    $identifier = $this->form->get('identifier');
     $identifier->setLabelAttributes([
         'class' => 'col-sm-2 control-label'
     ]);
@@ -40,7 +36,7 @@
 <div class="form-group">
     <?php
     /* @var $credential \Zend\Form\Element\Password */
-    $credential = $identity->get('password');
+    $credential = $this->form->get('password');
     $credential->setLabelAttributes([
         'class' => 'col-sm-2 control-label'
     ]);
@@ -68,6 +64,7 @@
         ]);
         echo $this->formElement($element);
         ?>
+        <a class="btn-link" href="<?= $this->url('forgot') ?>">Forgot password?</a>
     </div>
 </div>
 
