--- a/module/User/view/user/index/registration.phtml
+++ b/module/User/view/user/index/registration.phtml
@@ -15,10 +15,8 @@ echo $this->form()->openTag($this->form);
 
 <div class="form-group">
     <?php
-    /* @var $identity \User\Form\IdentifierFieldset */
     /* @var $identifier \Zend\Form\Element\Text */
-    $identity = $this->form->get('identity');
-    $identifier = $identity->get('identifier');
+    $identifier = $this->form->get('identifier');
     $identifier->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
@@ -39,7 +37,7 @@ echo $this->form()->openTag($this->form);
 <div class="form-group">
     <?php
     /* @var $credential \Zend\Form\Element\Password */
-    $credential = $identity->get('password');
+    $credential = $this->form->get('password');
     $credential->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
@@ -60,7 +58,7 @@ echo $this->form()->openTag($this->form);
 <div class="form-group">
     <?php
     /* @var $credential \Zend\Form\Element\Password */
-    $credential = $identity->get('identical');
+    $credential = $this->form->get('identical');
     $credential->setLabelAttributes(array(
         'class' => 'col-sm-2 control-label'
     ));
