--- a/module/User/view/user/index/restore.phtml
+++ b/module/User/view/user/index/restore.phtml
@@ -28,7 +28,7 @@ echo $this->formHidden($hashElement);
         'class' => 'form-control'
     ]);
     echo $this->formLabel($credential);
-    echo '<div class="col-sm-10">';
+    echo '<div class="col-sm-10" id="field-password">';
     echo $this->formPassword($credential);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
@@ -49,7 +49,7 @@ echo $this->formHidden($hashElement);
         'class' => 'form-control'
     ]);
     echo $this->formLabel($credential);
-    echo '<div class="col-sm-10">';
+    echo '<div class="col-sm-10" id="field-identical">';
     echo $this->formPassword($credential);
     echo $this->formElementErrors()
         ->setMessageOpenFormat('<div class="bs-callout bs-callout-danger">')
